--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main class="main">
         <article class="intro">
-            <p>This is a typing test. Your goal is to duplicate the provided text, EXACTLY, in the field below. The timer starts when you start typing, and only stops when you match this text exactly. Good Luck!</p>
+            <p>hello</p>
         </article><!-- .intro -->
         <section class="test-area">
             <div id="origin-text">
@@ -39,10 +39,16 @@
           <h2>Leaderboad</h2>
           <p>Here are the best performers, the scores to beat. Good luck!</p>
           <ol>
-            <li>23</li>
-            <li>33</li>
-            <li>44</li>
+            <li><p class="score">23</p><p class="name">John</p></li>
+            <li><p class="score">25</p><p class="name">Jane</p></li>
+            <li><p class="score">26</p><p class="name">Jim</p></li>
           </ol>
+          <ol id="tested">
+            <li>23</li>
+            <li>25</li>
+            <li>26</li>
+          </ol>
+
         </section>
     </main>
 
